crates/picus/tests/ui/no_root_application_types.rs
//! Ordinary application types live in grouped modules or the prelude.
use picus::{AppPicusExt, UiButton};

fn main() {}
